  (Luc Maranget, review by Gabriel Scherer and Xavier Leroy)

- #11024: Handle alerts in ocamldoc.
  The alert `[@@alert deprecated]` is handled specifically and it's no longer
  needed to duplicate the deprecated annotation (the alert for the compiler and
  the tag for the documentation). Every other alerts also appear in the
  documentation.
  (Jules Aguillon, review by Florian Angeletti)

### Manual and documentation:

### Compiler user-interface and warnings:

- #10909: Disable warning 59 (assignment to immutable blocks) unless flambda
  invariant checks are enabled.
  (Vincent Laviron, review by Gabriel Scherer)

- #10981: Implement a -cmi-file option for ocamlc and ocamlopt.
  (Sébastien Hinderer, review by Damien Doligez, Daniel Bünzli and
  Florian Angeletti)

* #11049: Stop padding 1-digit compiler minor version numbers.
  (So for instance OCaml 5.0 rather than 5.00)
  (Sébastien Hinderer, review by David Allsopp, Florian Angeletti and
  Xavier Leroy)

### Internal/compiler-libs changes:

- #10878, #10909: restore flambda after the Multicore merge.
  (Vincent Laviron, review by Gabriel Scherer and Xavier Leroy)

- #10864, #10888: restore afl-fuzz mode for sequential programs.
  (Jan Midtgaard, review by Xavier Leroy and Gabriel Scherer)

- #11008, #11047: rework GC statistics in the Multicore runtime
  (Gabriel Scherer, review by Enguerrand Decorne)

### Build system:

* #10893: Remove configuration options --disable-force-safe-string and
  DEFAULT_STRING=unsafe as well as --enable-force-safe-string and
  DEFAULT_STRING=safe which are now the default unconditionally.
  (Kate Deplaix, review by Gabriel Scherer and David Allsopp)

- Build native-code compilers on OpenBSD/aarch64
  (Christopher Zimmermann, review by Anil Madhavapeddy)

### Bug fixes:

- #11025, #11036: Do not pass -no-pie to the C compiler on musl/arm64
  (omni, Kate Deplaix and Antonio Nuno Monteiro, review by Xavier Leroy)
